<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrOSCon</string>
    <string name="refresh">Refresh</string>
    <string name="info">Homepage</string>
    <string name="host">Host</string>
    <string name="URL">mobile schedule url</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="fs">Fullscreen</string>
    <string name="map">maps</string>
    <string name="swfloor">Switch floor</string>
    <string name="nav">Navigation</string>

</resources>
