<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/nav"
        android:enabled="true"
        android:icon="@drawable/ic_menu_directions"
        android:showAsAction="always"
        android:title="@string/nav"
        android:visible="true">
    </item>
    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_menu_mapmode"
        android:showAsAction="always"
        android:title="@string/map">
    </item>
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_menu_home"
        android:showAsAction="always"
        android:title="@string/info">
    </item>
    <item
        android:id="@+id/fs"
        android:icon="@drawable/ic_menu_fullscreen"
        android:showAsAction="ifRoom"
        android:title="@string/fs">
    </item>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh">
    </item>

</menu>